demo/k8s-validating-admission-policy/sample-param.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  parameters:
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.agilebank.demo$"
