demo/k8s-validating-admission-policy/sample-vapbinding.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "g8rk8srequiredlabelsbinding"
spec:
  policyName: "ritak8srequiredlabels"
  paramRef:
    name: all-must-have-owner
    parameterNotFoundAction: Deny
  validationActions: [Deny]
